# Stellar-soroban-contracts

./: README.md
stellar-insured-contracts/: Cargo.toml  ERROR_CODES_REFERENCE.md  GAS_OPTIMIZATION.md  GAS_OPTIMIZATION_SUMMARY.md  ORACLE_VALIDATION.md  README.md  SHARED_MODULE_COMPLETE.md  SHARED_MODULE_IMPLEMENTATION.md  SHARED_MODULE_QUICK_REFERENCE.md  SHARED_TYPES_ERRORS_CONSTANTS.md  VALIDATION_EXAMPLES.md
stellar-insured-contracts/contracts/: Cargo.toml  gas_benchmarks.rs  lib.rs
stellar-insured-contracts/contracts/asset_registry/: Cargo.toml
stellar-insured-contracts/contracts/asset_registry/src/: lib.rs
stellar-insured-contracts/contracts/audit_trail/: Cargo.toml
stellar-insured-contracts/contracts/audit_trail/src/: audit.rs  complaince.rs  lib.rs  storage.rs  test.rs  types.rs
stellar-insured-contracts/contracts/authorization/src/: lib.rs
stellar-insured-contracts/contracts/claims/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/claims/src/: lib.rs
stellar-insured-contracts/contracts/dao-proposal/src/: contract.rs  lib.rs  storage.rs  types.rs  utils.rs
stellar-insured-contracts/contracts/governance/: lib.rs
stellar-insured-contracts/contracts/invariants/: Cargo.toml
stellar-insured-contracts/contracts/oracle/: Cargo.toml
stellar-insured-contracts/contracts/oracle/src/: lib.rs
stellar-insured-contracts/contracts/policy/: lib.rs
stellar-insured-contracts/contracts/policy/src/: optimized_policy.rs
stellar-insured-contracts/contracts/policy/test_snapshots/tests/: test_invalid_coverage_too_high.1.json
stellar-insured-contracts/contracts/privacy/: Cargo.toml
stellar-insured-contracts/contracts/privacy/src/: lib.rs
stellar-insured-contracts/contracts/risk-monitoring/: Cargo.toml
stellar-insured-contracts/contracts/risk-monitoring/src/: lib.rs  test.rs
stellar-insured-contracts/contracts/risk_pool/: Cargo.toml  lib.rs
stellar-insured-contracts/contracts/risk_pool/src/: optimized_risk_pool.rs
stellar-insured-contracts/contracts/shared/: Cargo.toml
stellar-insured-contracts/contracts/shared/src/: constants.rs  errors.rs  gas_optimization.rs  lib.rs  types.rs  validation.rs
stellar-insured-contracts/contracts/slashing/: Cargo.toml
stellar-insured-contracts/contracts/slashing/src/: lib.rs
stellar-insured-contracts/contracts/tokenized_insurance/: Cargo.toml
stellar-insured-contracts/contracts/tokenized_insurance/src/: amm.rs  errors.rs  ins_token.rs  lib.rs  parametric.rs  storage.rs  trading.rs  types.rs
stellar-insured-contracts/contracts/treasury/: Cargo.toml
stellar-insured-contracts/contracts/treasury/src/: lib.rs
stellar-insured-contracts/contracts/treasury/tests/utils/: test.helpers.rs
