[workspace]
resolver = "2"

members = [
    "contracts",
    "contracts/policy",
    "contracts/claims",
    "contracts/risk_pool",
    "contracts/governance",
    "contracts/slashing",
]

[workspace.dependencies]
soroban-sdk = "21.7.7"
soroban-sdk-macros = "21.7.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
