[package]
name = "risk-pool-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "risk_pool_contract"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
insurance-contracts = { path = "../" }
insurance-invariants = { path = "../invariants" }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
