[package]
name = "treasury"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
authorization = { path = "../authorization" }
insurance-invariants = { path = "../invariants" }
insurance-contracts = { path = "../" }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
name = "treasury"
crate-type = ["cdylib"]
path = "src/lib.rs"
